Fixed touch zoom on iOS

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,13 @@
 * {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -webkit-tap-highlight-color:transparent;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
   margin: 0;
   padding: 0;
+  touch-action: none;
 }
 
 *,
@@ -9,20 +16,12 @@
   box-sizing: inherit;
 }
 
-* {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -webkit-tap-highlight-color:transparent;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -o-user-select: none;
-}
-
 html {
   box-sizing: border-box;
   font-size: 100%;
   font-family: 'Lato', sans-serif;
   cursor: default;
+  height: 100%;
 }
 
 body {
